# serializer version: 1
# name: test_list_warns_about_long_awaiting_applications[JOB SEEKER - no warnings]
  '''
  <section aria-labelledby="apply-list-count" id="job-applications-section">
      <div class="table-responsive mt-3 mt-md-4">
          <table class="table table-hover table-sortable">
              <caption class="visually-hidden">
                  Liste des candidatures (les colonnes disposant d’un bouton dans leur entête peuvent être triées en cliquant sur le bouton)
              </caption>
              <thead>
                  <tr>
                      <th scope="col">
                          Candidature chez
                      </th>
                      <th aria-sort="descending" scope="col">
                          <button data-emplois-elements-visibility-on-selection="disabled" data-emplois-setter-target="#id_order" data-emplois-setter-value="created_at" type="button">
                              Émise le
                          </button>
                      </th>
                      <th scope="col">
                          Poste
                      </th>
                      <th scope="col">
                          Émetteur
                      </th>
                      <th class="text-end w-50px" scope="col">
                          <span class="visually-hidden">
                              Actions possibles sur les candidatures
                          </span>
                      </th>
                  </tr>
              </thead>
              <tbody>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link d-block" href="/apply/11111111-1111-1111-1111-111111111111/jobseeker/details?back_url=/apply/job_seeker/list">
                              Hit Pit
                          </a>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_11111111-1111-1111-1111-111111111111">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          30/03/2023
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          <i aria-hidden="true" class="ri-home-smile-2-line">
                          </i>
                          THROUGHPUT Max
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir ma candidature" data-bs-toggle="tooltip" href="/apply/11111111-1111-1111-1111-111111111111/jobseeker/details?back_url=/apply/job_seeker/list">
                              <i aria-label="Voir ma candidature" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link d-block" href="/apply/22222222-2222-2222-2222-222222222222/jobseeker/details?back_url=/apply/job_seeker/list">
                              Hit Pit
                          </a>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_22222222-2222-2222-2222-222222222222">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          18/03/2023
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          <i aria-hidden="true" class="ri-home-smile-2-line">
                          </i>
                          THROUGHPUT Max
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir ma candidature" data-bs-toggle="tooltip" href="/apply/22222222-2222-2222-2222-222222222222/jobseeker/details?back_url=/apply/job_seeker/list">
                              <i aria-label="Voir ma candidature" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link d-block" href="/apply/33333333-3333-3333-3333-333333333333/jobseeker/details?back_url=/apply/job_seeker/list">
                              Hit Pit
                          </a>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_33333333-3333-3333-3333-333333333333">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          16/02/2023
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          <i aria-hidden="true" class="ri-home-smile-2-line">
                          </i>
                          THROUGHPUT Max
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir ma candidature" data-bs-toggle="tooltip" href="/apply/33333333-3333-3333-3333-333333333333/jobseeker/details?back_url=/apply/job_seeker/list">
                              <i aria-label="Voir ma candidature" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
              </tbody>
          </table>
      </div>
  </section>
  
  '''
# ---
# name: test_list_warns_about_long_awaiting_applications[PRESCRIBER - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="apply-list-count" id="job-applications-section">
      <div class="table-responsive mt-3 mt-md-4">
          <table class="table table-hover table-sortable">
              <caption class="visually-hidden">
                  Liste des candidatures (les colonnes disposant d’un bouton dans leur entête peuvent être triées en cliquant sur le bouton)
              </caption>
              <thead>
                  <tr>
                      <th aria-sort="none" scope="col">
                          <button data-emplois-elements-visibility-on-selection="disabled" data-emplois-setter-target="#id_order" data-emplois-setter-value="job_seeker_full_name" type="button">
                              Candidature de
                          </button>
                      </th>
                      <th aria-sort="descending" scope="col">
                          <button data-emplois-elements-visibility-on-selection="disabled" data-emplois-setter-target="#id_order" data-emplois-setter-value="created_at" type="button">
                              Émise le
                          </button>
                      </th>
                      <th scope="col">
                          Employeur
                      </th>
                      <th scope="col">
                          Poste
                      </th>
                      <th scope="col">
                          Émetteur
                      </th>
                      <th class="text-nowrap" scope="col">
                          Critères administratifs
                      </th>
                      <th scope="col">
                          Statut éligibilité
                      </th>
                      <th class="text-end w-50px" scope="col">
                          <span class="visually-hidden">
                              Actions possibles sur les candidatures
                          </span>
                      </th>
                  </tr>
              </thead>
              <tbody>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriptions/list">
                              H… J…
                          </a>
                          <span class="d-block">
                          </span>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_11111111-1111-1111-1111-111111111111">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          30/03/2023
                      </td>
                      <td>
                          Hit Pit
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          Vous
                      </td>
                      <td>
                          <i class="text-disabled">
                              Aucun critère sélectionné
                          </i>
                      </td>
                      <td>
                          <div class="d-flex align-items-center">
                              <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                  <i aria-hidden="true" class="ri-error-warning-line">
                                  </i>
                                  Éligibilité IAE à valider
                              </span>
                          </div>
                          <span class="d-block">
                              Un diagnostic doit être réalisé
                          </span>
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriptions/list">
                              <i aria-label="Gérer la candidature de H… J…" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriptions/list">
                              H… J…
                          </a>
                          <span class="d-block">
                          </span>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_22222222-2222-2222-2222-222222222222">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          18/03/2023
                      </td>
                      <td>
                          Hit Pit
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          Vous
                      </td>
                      <td>
                          <i class="text-disabled">
                              Aucun critère sélectionné
                          </i>
                      </td>
                      <td>
                          <div class="d-flex align-items-center">
                              <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                  <i aria-hidden="true" class="ri-error-warning-line">
                                  </i>
                                  Éligibilité IAE à valider
                              </span>
                          </div>
                          <span class="d-block">
                              Un diagnostic doit être réalisé
                          </span>
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriptions/list">
                              <i aria-label="Gérer la candidature de H… J…" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
                  <tr class="align-top">
                      <td>
                          <a class="btn-link" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriptions/list">
                              H… J…
                          </a>
                          <span class="d-block">
                          </span>
                          <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_33333333-3333-3333-3333-333333333333">
                              Nouvelle candidature
                          </span>
                      </td>
                      <td>
                          16/02/2023
                      </td>
                      <td>
                          Hit Pit
                      </td>
                      <td>
                          Candidature spontanée
                      </td>
                      <td>
                          Vous
                      </td>
                      <td>
                          <i class="text-disabled">
                              Aucun critère sélectionné
                          </i>
                      </td>
                      <td>
                          <div class="d-flex align-items-center">
                              <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                  <i aria-hidden="true" class="ri-error-warning-line">
                                  </i>
                                  Éligibilité IAE à valider
                              </span>
                          </div>
                          <span class="d-block">
                              Un diagnostic doit être réalisé
                          </span>
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriptions/list">
                              <i aria-label="Gérer la candidature de H… J…" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
              </tbody>
          </table>
      </div>
  </section>
  
  '''
# ---
# name: test_list_warns_about_long_awaiting_applications[SIAE - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="apply-list-count" id="job-applications-section">
      <div class="table-responsive mt-3 mt-md-4">
          <form data-emplois-elements-visibility-on-selection-controller="selected-application" hx-get="/apply/siae/list/actions?list_url=/apply/siae/list" hx-indicator=".selection-indicator" hx-swap="none" hx-trigger="change delay:.5">
              <table class="table table-hover table-sortable">
                  <caption class="visually-hidden">
                      Liste des candidatures (les colonnes disposant d’un bouton dans leur entête peuvent être triées en cliquant sur le bouton)
                  </caption>
                  <thead>
                      <tr>
                          <th class="text-start w-50px" scope="col">
                              <input autocomplete="off" class="form-check-input" data-emplois-select-all-target-input-name="selected-application" id="select-all-applications" type="checkbox"/>
                              <label class="visually-hidden" for="select-all-applications">
                                  Sélectionner toutes les candidatures
                              </label>
                          </th>
                          <th aria-sort="none" scope="col">
                              <button data-emplois-elements-visibility-on-selection="disabled" data-emplois-setter-target="#id_order" data-emplois-setter-value="job_seeker_full_name" type="button">
                                  Candidature de
                              </button>
                          </th>
                          <th aria-sort="descending" scope="col">
                              <button data-emplois-elements-visibility-on-selection="disabled" data-emplois-setter-target="#id_order" data-emplois-setter-value="created_at" type="button">
                                  Émise le
                              </button>
                          </th>
                          <th scope="col">
                              Poste
                          </th>
                          <th scope="col">
                              Émetteur
                          </th>
                          <th class="text-nowrap" scope="col">
                              Critères administratifs
                          </th>
                          <th scope="col">
                              Statut éligibilité
                          </th>
                          <th class="text-end w-50px" scope="col">
                              <span class="visually-hidden">
                                  Actions possibles sur les candidatures
                              </span>
                          </th>
                      </tr>
                  </thead>
                  <tbody>
                      <tr class="align-top">
                          <th class="text-start w-50px" scope="row">
                              <input autocomplete="off" class="form-check-input" id="select-11111111-1111-1111-1111-111111111111" name="selected-application" type="checkbox" value="11111111-1111-1111-1111-111111111111"/>
                              <label class="visually-hidden" for="select-11111111-1111-1111-1111-111111111111">
                                  Sélectionner cette candidature
                              </label>
                          </th>
                          <td>
                              <a class="btn-link" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">
                                  HENRY Jacques
                              </a>
                              <span class="d-block">
                              </span>
                              <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_11111111-1111-1111-1111-111111111111">
                                  Nouvelle candidature
                              </span>
                          </td>
                          <td>
                              30/03/2023
                          </td>
                          <td>
                              Candidature spontanée
                          </td>
                          <td>
                              <i aria-hidden="true" class="ri-home-smile-2-line">
                              </i>
                              THROUGHPUT Max
                          </td>
                          <td>
                              <i class="text-disabled">
                                  Aucun critère sélectionné
                              </i>
                          </td>
                          <td>
                              <div class="d-flex align-items-center">
                                  <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                      <i aria-hidden="true" class="ri-error-warning-line">
                                      </i>
                                      Éligibilité IAE à valider
                                  </span>
                              </div>
                              <span class="d-block">
                                  Un diagnostic doit être réalisé
                              </span>
                          </td>
                          <td class="text-end w-50px align-middle">
                              <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">
                                  <i aria-label="Gérer la candidature de HENRY Jacques" class="ri-arrow-drop-right-line fs-lg">
                                  </i>
                              </a>
                          </td>
                      </tr>
                      <tr class="align-top">
                          <th class="text-start w-50px" scope="row">
                              <input autocomplete="off" class="form-check-input" id="select-22222222-2222-2222-2222-222222222222" name="selected-application" type="checkbox" value="22222222-2222-2222-2222-222222222222"/>
                              <label class="visually-hidden" for="select-22222222-2222-2222-2222-222222222222">
                                  Sélectionner cette candidature
                              </label>
                          </th>
                          <td>
                              <a class="btn-link" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">
                                  HENRY Jacques
                              </a>
                              <span class="d-block">
                              </span>
                              <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_22222222-2222-2222-2222-222222222222">
                                  Nouvelle candidature
                              </span>
                          </td>
                          <td>
                              18/03/2023
                          </td>
                          <td>
                              Candidature spontanée
                          </td>
                          <td>
                              <i aria-hidden="true" class="ri-home-smile-2-line">
                              </i>
                              THROUGHPUT Max
                          </td>
                          <td>
                              <i class="text-disabled">
                                  Aucun critère sélectionné
                              </i>
                          </td>
                          <td>
                              <div class="d-flex align-items-center">
                                  <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                      <i aria-hidden="true" class="ri-error-warning-line">
                                      </i>
                                      Éligibilité IAE à valider
                                  </span>
                              </div>
                              <span class="d-block">
                                  Un diagnostic doit être réalisé
                              </span>
                          </td>
                          <td class="text-end w-50px align-middle">
                              <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">
                                  <i aria-label="Gérer la candidature de HENRY Jacques" class="ri-arrow-drop-right-line fs-lg">
                                  </i>
                              </a>
                          </td>
                      </tr>
                      <tr class="align-top">
                          <th class="text-start w-50px" scope="row">
                              <input autocomplete="off" class="form-check-input" id="select-33333333-3333-3333-3333-333333333333" name="selected-application" type="checkbox" value="33333333-3333-3333-3333-333333333333"/>
                              <label class="visually-hidden" for="select-33333333-3333-3333-3333-333333333333">
                                  Sélectionner cette candidature
                              </label>
                          </th>
                          <td>
                              <a class="btn-link" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">
                                  HENRY Jacques
                              </a>
                              <span class="d-block">
                              </span>
                              <span class="badge rounded-pill text-nowrap badge-sm bg-info" id="state_33333333-3333-3333-3333-333333333333">
                                  Nouvelle candidature
                              </span>
                          </td>
                          <td>
                              16/02/2023
                          </td>
                          <td>
                              Candidature spontanée
                          </td>
                          <td>
                              <i aria-hidden="true" class="ri-home-smile-2-line">
                              </i>
                              THROUGHPUT Max
                          </td>
                          <td>
                              <i class="text-disabled">
                                  Aucun critère sélectionné
                              </i>
                          </td>
                          <td>
                              <div class="d-flex align-items-center">
                                  <span class="badge badge-sm rounded-pill bg-warning-lighter text-warning">
                                      <i aria-hidden="true" class="ri-error-warning-line">
                                      </i>
                                      Éligibilité IAE à valider
                                  </span>
                              </div>
                              <span class="d-block">
                                  Un diagnostic doit être réalisé
                              </span>
                          </td>
                          <td class="text-end w-50px align-middle">
                              <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir sa candidature" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">
                                  <i aria-label="Gérer la candidature de HENRY Jacques" class="ri-arrow-drop-right-line fs-lg">
                                  </i>
                              </a>
                          </td>
                      </tr>
                  </tbody>
              </table>
          </form>
      </div>
      <p>
          Les informations détaillées sur la conservation des candidatures sont disponibles dans
          <a href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/44240682937745" rel="noopener" target="_blank">
              notre documentation
          </a>
          .
      </p>
  </section>
  
  '''
# ---
